tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier1LV-AAAAAAAAAAAAAAAAAAAAAw==__YourMagicProgres-AAAAAAAAAAAAAAAAAAAAaA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 104,
  "prerequisites": [
    103
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Now that you're able to produce Aluminium, you may dig into magic. If you haven't unlocked basic thaumaturgy, try to find a Silverwood and a Greatwood sapling.\n\nThere is a coin quest that lets you purchase these saplings. If you haven't found any yet, go check it out!",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§5§lYour Magic Progression",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    103
  ],
  "rewards": [],
  "tasks": []
}
