tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier1LV-AAAAAAAAAAAAAAAAAAAAAw==__YourOilisTooCrud-AAAAAAAAAAAAAAAAAAACIw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 547,
  "optional_prerequisites": [
    546,
    93
  ],
  "prerequisites": [],
  "properties": {
    "auto_claim": false,
    "desc": "Burning oil in the combustion generator is a very inefficient way of producing power. Every bucket/cell of oil only gives you 20,000 EU. Time to refine it.\n\nYou'll need to use a circuit to pick which of the products you want. Later on you can make a Distillation Tower to get all of them, but that's far away for now.\n\nYou can also distill many other fluids! There are two that are useful, but take a long time to distill, so you should set them up in advance:\nLubricant (from Creosote) and Distilled Water (from Water).",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§5§lYour Oil is Too Crude? Refine it!",
    "party_single_reward": false,
    "quest_logic": "OR",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "rewards": [],
  "tasks": []
}
