tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier1LV-AAAAAAAAAAAAAAAAAAAAAw==__YoureGonnaHateTh-AAAAAAAAAAAAAAAAAAAAWw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 91,
  "prerequisites": [
    88
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The first item you'll need a lot of. If you want to pull items out of chests or barrels you'll need one.\n\nIt works well with item pipes or GT machines, adjust with a screwdriver.\n\nYou can access the cover's interface with Shift+RMB.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§5§lYou're Gonna Hate This #1",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    88
  ],
  "rewards": [],
  "tasks": []
}
