tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier1LV-AAAAAAAAAAAAAAAAAAAAAw==__YoureGonnaHateTh-AAAAAAAAAAAAAAAAAAACEQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 529,
  "prerequisites": [
    716
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The fifth item you'll need a lot of. For the microwave, the scanner, the precision laser engraver, etc.\n\nThe Emitter and Sensor aren't used as much as the other items, fortunately.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§5§lYou're Gonna Hate This #5",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    716
  ],
  "rewards": [],
  "tasks": []
}
