tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier1LV-AAAAAAAAAAAAAAAAAAAAAw==__YoureGonnaHateTh-AAAAAAAAAAAAAAAAAAACEg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 530,
  "prerequisites": [
    716
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The sixth item you'll need a lot of. For the scanner and the seismic prospector.\n\n[note]BTW, there's technically one more, the Field Generator, but you need higher tier circuits to make it, and it isn't used as often until later tiers.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§5§lYou're Gonna Hate This #6",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    716
  ],
  "rewards": [],
  "tasks": []
}
